--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <div id="delete-log-section" class="section">
             <h2>Delete Log Entry</h2>
             <input type="date" id="delete-log-date">
+            <select id="delete-log-mantra">
+                <!-- Options will be populated dynamically -->
+            </select>
             <button class="btn remove" onclick="deleteLog()">Delete Log</button>
         </div>
 
