--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="remove-mantra-section" class="section">
             <h2>Remove Mantra</h2>
             <select id="remove-mantra-select">
-                <!-- Options will be populated dynamically -->
+                <!-- Options will be populated dynamically by loadMantras() -->
             </select>
             <button class="btn remove" onclick="removeMantra()">Remove Mantra</button>
         </div>
@@ -39,7 +39,7 @@
             <button class="btn add" onclick="logJapa()">Log Japa Mala</button>
         </div>
 
-        <!-- Delete Log Section -->
+        <!-- Delete Log Entry Section -->
         <div id="delete-log-section" class="section">
             <h2>Delete Log Entry</h2>
             <input type="date" id="delete-log-date">
@@ -55,7 +55,7 @@
             <p>Total Malas: <span id="total-malas">0</span></p>
         </div>
 
-        <!-- Logs Section -->
+        <!-- Japa Mala Logs Section -->
         <div id="logs-section" class="section">
             <h2>Japa Mala Logs</h2>
             <table>
